--- a/views/generate-playlist-success.handlebars
+++ b/views/generate-playlist-success.handlebars
@@ -13,3 +13,10 @@
         <input type="submit" class="pure-button" style="width: auto; height: auto; white-space: normal; word-wrap: break-word; margin: 1em;" value="Create a lineup for another festival"></input>
     </form>
 </div>
+<div style="margin-top: 3em; display: flex; flex-direction: column; align-items: center; text-align: center;">
+    <p>Have feedback on improvements? <a href="mailto:lineuplist@brianteam.dev">Let me know</a>.</p>
+    <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+        <p>Did I save you some time or raise your stoke level?</p>
+        <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="second.string" data-color="#1e78e6" data-emoji="🍩" data-font="Bree" data-text="Buy me a donut" data-outline-color="#ffffff" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script>
+    </div>
+</div>
