Change title overrides to include session festival data

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
 
     <link rel="stylesheet" href="/css/style.css">
     <meta property="og:url" content="{{openGraphUrl}}" />
-    <meta property="og:description" content="Generate unique playlists for music festivals from your own custom filters and settings" />
+    <meta property="og:description" content="Generate unique playlists for music festivals from your own custom filters" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="{{openGraphImageUrl}}" />
