New opengraph image

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,9 +30,9 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="{{openGraphImageUrl}}" />
-    <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="1200" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="5184" />
+    <meta property="og:image:height" content="3456" />
     <meta name="twitter:card" content="summary" />
     <!-- Icon made by surang from www.flaticon.com -->
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
