Tweak PureCSS classes

--- a/views/personalized-lineup.handlebars
+++ b/views/personalized-lineup.handlebars
@@ -1,6 +1,6 @@
 <h2 style="text-align: center;">Your personal {{festivalDisplayName}} lineup</h2>
 <div class="pure-g" style="justify-content: center; align-items: center;">
-    <div class="pure-u-11-12 pure-u-lg-7-12 pure-u-md-5-12" style="text-align: center;">
+    <div class="pure-u-11-12 pure-u-md-7-12 pure-u-lg-5-12" style="text-align: center;">
         <form class="pure-form" id="generatePlaylistForm" action="/generate-spotify-playlist", method="POST">
             <p style="margin-bottom: 0;">Click below to generate a Spotify playlist</p>
             <p style="font-size: smaller; margin-top: 0;">You will need to authorize Lineup List to access your Spotify. The only permissions used are for reading your existing playlists (to determine if you already have a Lineup List playlist created for this festival) and for creating a new playlist within your account.</p>
