--- a/views/personalized-lineup.handlebars
+++ b/views/personalized-lineup.handlebars
@@ -1,11 +1,11 @@
 <h2 style="text-align: center;">Your personal {{festivalDisplayName}} lineup</h2>
 <div class="pure-g" style="justify-content: center; align-items: center;">
     <div class="pure-u-11-12 pure-u-md-7-12 pure-u-lg-5-12" style="text-align: center;">
-        <form class="pure-form" id="generatePlaylistForm" action="/generate-spotify-playlist", method="POST">
-            <p style="margin-bottom: 0;">Click below to generate a Spotify playlist</p>
-            <p style="font-size: smaller; margin-top: 0;">You will need to authorize Lineup List to access your Spotify. The only permissions used are for reading your existing playlists (to determine if you already have a Lineup List playlist created for this festival) and for creating a new playlist within your account.</p>
+        <form class="pure-form" style="margin-bottom: 2em" id="generatePlaylistForm" action="/generate-spotify-playlist", method="POST">
+            <p style="margin-bottom: 4px;">Customize playlist name:</p>
             <input style="text-align: center;" class="pure-input-1" type="text" name="playlistName" value="{{playlistName}}" required></input>
-            <input style="margin-top: 8px;" class="pure-button pure-button-primary" type="submit" value="Generate Playlist"></input>
+            <input style="margin-top: 16px;" class="pure-button pure-button-primary" type="submit" value="Generate Playlist"></input>
+            <p style="font-size: smaller;">You will need to authorize Lineup List to access your Spotify. The only permissions used are for reading your existing playlists (to determine if you already have a Lineup List playlist created for this festival) and for creating a new playlist within your account.</p>
         </form>
         <ul style="list-style: none; text-align: left;">
             {{#each acts}}
