--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -11,7 +11,7 @@
         <select name="year" id="year-select">
         </select>
     </div>
-    <a href="mailto:lineuplist@brianteam.dev" style="font-size: smaller; margin-bottom: 2rem;">Don't see the festival or year you want? Let me know</a>
+    <a href="mailto:contact@lineuplist.live" style="font-size: smaller; margin-bottom: 2rem;">Don't see the festival or year you want? Let me know</a>
     <input type="submit" class="pure-button pure-button-primary" style="align-self: center;"/>
 </form>
 
