--- a/views/faq.handlebars
+++ b/views/faq.handlebars
@@ -14,6 +14,6 @@
         </ul>
         <p>If you want to change anything later, just re-run the process. If you haven't renamed the Spotify playlist it will create a new one from scratch and overwrite it. If you change the name of the generated playlist, Lineup Lists will generate an all-new one.</p>
         <h4>I still don't get it / something is broken / why doesn't it do X?</h4>
-        <p>Please <a href="mailto:lineuplist@brianteam.dev">send me an email</a>! I'm always looking for more feedback on what could be better or new features to implement. The logic used for connecting artists and songs across the different services and APIs used isn't perfect, so sometimes an artist might have some songs missing or there might be songs from a different, but similarly named, artist in your playlist. The more feedback I get with issues the better I can make Lineup List for you!</p>
+        <p>Please <a href="mailto:contact@lineuplist.live">send me an email</a>! I'm always looking for more feedback on what could be better or new features to implement. The logic used for connecting artists and songs across the different services and APIs used isn't perfect, so sometimes an artist might have some songs missing or there might be songs from a different, but similarly named, artist in your playlist. The more feedback I get with issues the better I can make Lineup List for you!</p>
     </div>
 </div>
